Added a popup system for menus