@@ -1,6 +1,6 @@
 package zgame.core.state;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
 
 import zgame.core.Game;
 import zgame.core.graphics.Renderer;
@@ -13,36 +13,43 @@ import zgame.menu.Menu;
  */
 public abstract class MenuState<D>extends GameState<D>{
 	
-	/** The {@link Menu}s which this {@link MenuState} uses. The top of the stack ticks and takes input by default, the rest only render */
-	private LinkedList<Menu<D>> menuStack;
-	
-	// TODO add options to turn on or off tick, render, and input methods individually
-	// Do this with nodes? Like, each node decides which actions happen
+	/** The {@link MenuNode}s containing {@link Menu}s which this {@link MenuState} uses. The top of the stack ticks and takes input by default, the rest only render */
+	private ArrayList<MenuNode<D>> menuStack;
 	
 	/**
 	 * Create a new {@link MenuState} with the given {@link Menu}
 	 * 
 	 * @param menu The menu to use
 	 */
+
 	public MenuState(Menu<D> menu){
+		this(new MenuNode<>(menu));
+	}
+	/**
+	 * Create a new {@link MenuState} with the given {@link MenuNode}
+	 * 
+	 * @param menu The node to use
+	 */
+	public MenuState(MenuNode<D> menu){
 		super(false);
-		this.menuStack = new LinkedList<Menu<D>>();
-		this.menuStack.addFirst(menu);
+		this.menuStack = new ArrayList<MenuNode<D>>();
+		this.menuStack.add(menu);
 	}
 	
 	/** @return The root menu of this {@link MenuState}, i.e. the menu on the bottom before popups */
 	public Menu<D> getMenu(){
-		return this.menuStack.getFirst();
+		return this.menuStack.get(0).getMenu();
 	}
 
+	/** @return The menu on top of all other menus */
 	public Menu<D> getTopMenu(){
-		return this.menuStack.getLast();
+		return this.menuStack.get(this.menuStack.size() - 1).getMenu();
 	}
 	
 	/** @param menu The new root menu of this {@link MenuState}, i.e. the menu on the bottom before popups */
 	public void setMenu(Menu<D> menu){
-		this.menuStack.removeFirst();
-		this.menuStack.addFirst(menu);
+		this.menuStack.remove(0);
+		this.menuStack.add(0, new MenuNode<>(menu));
 	}
 	
 	/**
@@ -50,7 +57,15 @@ public abstract class MenuState<D>extends GameState<D>{
 	 * @param menu The menu to add
 	 */
 	public void popupMenu(Menu<D> menu){
-		this.menuStack.addLast(menu);
+		this.popupMenu(new MenuNode<D>(menu));
+	}
+
+	/**
+	 * Add the given {@link Menu} on top of the existing menus on this state
+	 * @param menu The node to add
+	 */
+	public void popupMenu(MenuNode<D> menu){
+		this.menuStack.add(menu);
 	}
 	
 	/**
@@ -60,37 +75,52 @@ public abstract class MenuState<D>extends GameState<D>{
 	 */
 	public Menu<D> removeTopMenu(){
 		if(this.menuStack.size() == 1) return null;
-		return this.menuStack.removeLast();
+		return this.menuStack.remove(this.menuStack.size() - 1).getMenu();
 	}
 	
 	@Override
 	public void tick(Game<D> game, double dt){
+		for(int i = 0; i < this.menuStack.size() - 1; i++){
+			MenuNode<D> m = this.menuStack.get(i);
+			m.tick(game, dt);
+		}
 		this.getTopMenu().tick(game, dt);
-		// this.menuStack.forEach(m -> m.tick(game, dt));
 	}
 	
 	@Override
 	public void keyAction(Game<D> game, int button, boolean press, boolean shift, boolean alt, boolean ctrl){
+		for(int i = 0; i < this.menuStack.size() - 1; i++){
+			MenuNode<D> m = this.menuStack.get(i);
+			m.keyAction(game, button, press, shift, alt, ctrl);
+		}
 		this.getTopMenu().keyAction(game, button, press, shift, alt, ctrl);
-		// this.menuStack.forEach(m -> m.keyAction(game, button, press, shift, alt, ctrl));
 	}
 	
 	@Override
 	public void mouseAction(Game<D> game, int button, boolean press, boolean shift, boolean alt, boolean ctrl){
+		for(int i = 0; i < this.menuStack.size() - 1; i++){
+			MenuNode<D> m = this.menuStack.get(i);
+			m.mouseAction(game, button, press, shift, alt, ctrl);
+		}
 		this.getTopMenu().mouseAction(game, button, press, shift, alt, ctrl);
-		// this.menuStack.forEach(m -> m.mouseAction(game, button, press, shift, alt, ctrl));
 	}
 	
 	@Override
 	public void mouseMove(Game<D> game, double x, double y){
+		for(int i = 0; i < this.menuStack.size() - 1; i++){
+			MenuNode<D> m = this.menuStack.get(i);
+			m.mouseMove(game, x, y);
+		}
 		this.getTopMenu().mouseMove(game, x, y);
-		// this.menuStack.forEach(m -> m.mouseMove(game, x, y));
 	}
 	
 	@Override
 	public void mouseWheelMove(Game<D> game, double amount){
+		for(int i = 0; i < this.menuStack.size() - 1; i++){
+			MenuNode<D> m = this.menuStack.get(i);
+			m.mouseWheelMove(game, amount);
+		}
 		this.getTopMenu().mouseWheelMove(game, amount);
-		// this.menuStack.forEach(m -> m.mouseWheelMove(game, amount));
 	}
 	
 	/** Does nothing for MenuState */
@@ -100,12 +130,16 @@ public abstract class MenuState<D>extends GameState<D>{
 	
 	@Override
 	public void render(Game<D> game, Renderer r){
-		this.getMenu().render(game, r);
-		this.menuStack.forEach(m ->{
+		Menu<D> menu = this.getTopMenu();
+		menu.renderBackground(game, r);
+		menu.render(game, r);
+		menu.renderHud(game, r);
+		for(int i = 0; i < this.menuStack.size() - 1; i++){
+			MenuNode<D> m = this.menuStack.get(i);
 			m.renderBackground(game, r);
 			m.render(game, r);
 			m.renderHud(game, r);
-		});
+		}
 	}
 	
 	/** Does nothing for MenuState */
